--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ block content
   p.
     Use this form to send MMS notifications to any subscribers.
 
-  form(action='/message/send', method='POST')
+  form(action='/myapp/message/send', method='POST')
 
     // The text of the message to send
     .form-group
